<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.SignInActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_sign_in_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/sign_in_error"
        android:gravity="center_horizontal"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textAllCaps="false"
        android:text="@string/create_new_account" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textAllCaps="false"
        android:text="@string/forgot_password" />









</LinearLayout>