<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_group1">
        <item
            android:id="@+id/menu_item_search_settings"
            android:title="@string/change_email"
            android:icon="@drawable/ic_action_gear"
            app:showAsAction="ifRoom"/>
    </group>

    <group android:id="@+id/menu_group2">
    <item
        android:id="@+id/menu_item_change_email"
        android:title="@string/change_email"
        android:icon="@drawable/ic_email"
        app:showAsAction="ifRoom"/>
    </group>

    <group android:id="@+id/menu_group3">
        <item
            android:id="@+id/menu_item_change_password"
            android:title="@string/change_password"
            android:icon="@drawable/ic_action_lock_open"
            app:showAsAction="ifRoom"/>
    </group>

    <group android:id="@+id/menu_group4">
    <item
        android:id="@+id/menu_item_log_out"
        android:title="@string/log_out"
        android:icon="@drawable/ic_action_exit"
        app:showAsAction="ifRoom"/>
    </group>
</menu>