<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLightGreen">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_user_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_user_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_user_email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_user_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_points"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_user_ID" />



</androidx.constraintlayout.widget.ConstraintLayout>